--- a/simple_ML_models.ipynb
+++ b/simple_ML_models.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Introduction\n",
         "\n",
-        "In this project, I'm going to estimate player's value based on his: overall, potential, age and wage. I'm going to use and compare some different machine learning models from sklearn, and my own implementation of linear regression using: closed formula, gradient descent and pytorch."
+        "In this part of the project, I'm going to estimate player's value based on his: overall, potential, age and wage. I'm going to use and compare some different machine learning models from sklearn, and my own implementation of linear regression using: closed formula, gradient descent and pytorch."
       ]
     },
     {
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "97a538a6",
       "metadata": {
         "colab": {
@@ -77,7 +77,7 @@
         "    data['player_positions'] = data['player_positions'].apply(lambda x: x.split(', '))\n",
         "    return data\n",
         "\n",
-        "df = read_data(\"utils/players_22.csv\")"
+        "df = read_data(\"players_22.csv\")"
       ]
     },
     {
