--- a/simple_ML_models.ipynb
+++ b/simple_ML_models.ipynb
@@ -3929,7 +3929,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "cuda_test_wsl",
+      "display_name": "MSiD",
       "language": "python",
       "name": "python3"
     },
@@ -3943,7 +3943,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.2"
+      "version": "3.11.11"
     }
   },
   "nbformat": 4,
